--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-aiohttp==3.7.4
+aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==20.3.0
 certifi==2020.12.5
-chardet==3.0.4
+chardet==4.0.0
 git+git://github.com/kyb3r/dhooks.git#egg=dhooks
 idna==2.10
 multidict==5.1.0
 requests==2.25.1
 typing-extensions==3.7.4.3
-urllib3==1.26.3
+urllib3==1.26.4
 yarl==1.6.3
